Try to fix layout

--- a/blogposts/thoughts/2018-06-30-whoami.md
+++ b/blogposts/thoughts/2018-06-30-whoami.md
@@ -3,8 +3,9 @@ title:  "whoami - Growing up with Abuse"
 subtitle: 'Sharing my story'
 date: 2018-06-30 00:00:00
 featured_image: '/images/Sidebar/Blog/whoami.jpg'
+layout: post
 ---
-**Note**: This post contains abuse & self harm. 
+**Note**: This post contains abuse & self harm.
 
 In April of 2017, Justin Flory wrote an article on Medium, titled [Turn on the lights](https://medium.com/@jwflory/turn-on-the-lights-267603e553b5)
 I remember reading it back then, and feeling so blown away by his courage, to talk about something so personal.
@@ -18,8 +19,8 @@ There's not much I truly remember about my childhood. I remember growing up in a
 
 <center><div class="tenor-gif-embed" data-postid="5956836" data-share-method="host" data-width="100%" data-aspect-ratio="2.4292682926829268"><a href="https://tenor.com/view/harry-potter-black-sheep-family-go-gif-5956836">Harry Potter Black GIF</a> from <a href="https://tenor.com/search/harrypotter-gifs">Harrypotter GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script></center>
 
-I only came to this realization around 11/2016. Growing up, I always thought that it was normal to be blamed for everything as a child, of being insulted, and of being threatened. Even now, as of writing this, I still cannot tell whether what happened was normal or not. 
-The way that I found out that what was happening to me wasn't normal, was also a coincidence. 
+I only came to this realization around 11/2016. Growing up, I always thought that it was normal to be blamed for everything as a child, of being insulted, and of being threatened. Even now, as of writing this, I still cannot tell whether what happened was normal or not.
+The way that I found out that what was happening to me wasn't normal, was also a coincidence.
 
 I remember I was googling various things of my personality (Which is something that, to this day, I still do)
 Near the bottom of my screen, there was this link, leading to a page that described forms of abuse, abusive behavior, and symptoms.
@@ -36,25 +37,23 @@ The only thing that was keeping me `alive` back then, was Open Labs Hackerspace.
 
 When I turned 15, I was freshmen in high-school.  There, I met these two people, who, for some reason, decided they wanted to be there for me no matter what I said. (They had seen my cuts)
 
-On 28th of December 2016, I remember hitting rock bottom. I had managed to cut myself deeper than ever before. It was at the point where the place was full of towels with blood. Sitting there, in pain, I had this experience where, I saw myself from outside of my body. It was as if seeing a movie where I was playing the main role, and everything wrong that I was doing became obvious. 
+On 28th of December 2016, I remember hitting rock bottom. I had managed to cut myself deeper than ever before. It was at the point where the place was full of towels with blood. Sitting there, in pain, I had this experience where, I saw myself from outside of my body. It was as if seeing a movie where I was playing the main role, and everything wrong that I was doing became obvious.
 
 At that point I realized that, even though I thought I was alone, and felt like it, wasn't.
-And that was the moment I started feeling hope again. 
+And that was the moment I started feeling hope again.
 
-To this day, I still live with my abuser. 
-They do not understand that what they do is abuse, and that it's harmful. 
+To this day, I still live with my abuser.
+They do not understand that what they do is abuse, and that it's harmful.
 But at least my mind is safe because, I know that, they won't have another kid to abuse.
 
 **But they are not alone.**
-And this is what convinced me to write this post. Because, I'm nor the first nor the last person who dealt with abuse. Yes, abusers are not alone. They have eachother. But so are we. I know how it feels, when you feel as if you were a mistake, like a parasite of the earth.  But please, hear me when I say that you're not. 
-Being abused, is weird. There's no words that can describe it, let alone describe how you feel. What happened to you was unjust. But you were not a mistake. Abuse, is a cycle, it's passed from generation to generation. And so, **it is our duty, to break the cycle**. So that the kids of tomorrow, don't have to suffer what we suffered through. 
+And this is what convinced me to write this post. Because, I'm nor the first nor the last person who dealt with abuse. Yes, abusers are not alone. They have eachother. But so are we. I know how it feels, when you feel as if you were a mistake, like a parasite of the earth.  But please, hear me when I say that you're not.
+Being abused, is weird. There's no words that can describe it, let alone describe how you feel. What happened to you was unjust. But you were not a mistake. Abuse, is a cycle, it's passed from generation to generation. And so, **it is our duty, to break the cycle**. So that the kids of tomorrow, don't have to suffer what we suffered through.
 
 <center><iframe src="https://giphy.com/embed/5IBvcQODn5YK4" width="480" height="412" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/adult-swim-rick-and-morty-focus-on-science-just-might-be-the-most-solid-piece-of-life-5IBvcQODn5YK4"></a></p></center>
 
 ***If you ever feel like you need to open up to someone, feel free to [reach me](https://t.me/kominoshja). There's no such thing as bad time!***
 
-On the last paragraph of this post, I want to thank some people who, were there for me, even if they didn't realize it back at the time. 
+On the last paragraph of this post, I want to thank some people who, were there for me, even if they didn't realize it back at the time.
 I want to thank [Redon Skikuli](http://redon.skikuli.com/), [Elio Qoshi](https://elioqoshi.me/), [Jona Azizaj](https://jona.azizaj.com/), [Kristi Progri](https://kristiprogri.com/), [Silva Arapi](https://twitter.com/arapisilva?lang=en) and every member of **[Open Labs Hackerspace](https://openlabs.cc)**. You guys provided a home and a family for me, without asking for anything in return. Second I want to rethank [Justin Flory](https://justinwflory.com/), for giving me the courage to talk about this. And I also want to thank [Tanner Filip](https://tannerfilip.org/), Arber Shytermeja , Artemisa Themeli, and everybody who reached out to me in time of need.  Most importantly I want to thank my mom, sister, and friends (You know who you are :wink: )
 Just wanted to let you know that, without all of you, I might not have been alive.
-
-
