--- a/_posts/thoughts/2018-06-30-whoami.md
+++ b/_posts/thoughts/2018-06-30-whoami.md
@@ -4,6 +4,7 @@ subtitle: "Sharing my story"
 date: "2018-06-30 00:00:00"
 featured_image: "/images/Sidebar/Blog/whoami.jpg"
 layout: post
+categories: [thoughts]
 ---
 **Note**: This post contains abuse & self harm.
 
