Fix typos on some posts

--- a/_posts/thoughts/2018-06-30-whoami.md
+++ b/_posts/thoughts/2018-06-30-whoami.md
@@ -18,8 +18,6 @@ I grew up in Albania, a country located in Balkans. I was born and raised on Dur
 
 There's not much I truly remember about my childhood. I remember growing up in a small neighborhood, which was filled with families which together formed a community. There was a lot happening to me, in a time when  I didn't fully understand what was happening. I was abused as a child.
 
-<center><div class="tenor-gif-embed" data-postid="5956836" data-share-method="host" data-width="100%" data-aspect-ratio="2.4292682926829268"><a href="https://tenor.com/view/harry-potter-black-sheep-family-go-gif-5956836">Harry Potter Black GIF</a> from <a href="https://tenor.com/search/harrypotter-gifs">Harrypotter GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script></center>
-
 I only came to this realization around 11/2016. Growing up, I always thought that it was normal to be blamed for everything as a child, of being insulted, and of being threatened. Even now, as of writing this, I still cannot tell whether what happened was normal or not.
 The way that I found out that what was happening to me wasn't normal, was also a coincidence.
 
@@ -56,5 +54,5 @@ Being abused, is weird. There's no words that can describe it, let alone describ
 ***If you ever feel like you need to open up to someone, feel free to [reach me](https://t.me/kominoshja). There's no such thing as bad time!***
 
 On the last paragraph of this post, I want to thank some people who, were there for me, even if they didn't realize it back at the time.
-I want to thank [Redon Skikuli](http://redon.skikuli.com/), [Elio Qoshi](https://elioqoshi.me/), [Jona Azizaj](https://jona.azizaj.com/), [Kristi Progri](https://kristiprogri.com/), [Silva Arapi](https://twitter.com/arapisilva?lang=en) and every member of **[Open Labs Hackerspace](https://openlabs.cc)**. You guys provided a home and a family for me, without asking for anything in return. Second I want to rethank [Justin Flory](https://justinwflory.com/), for giving me the courage to talk about this. And I also want to thank [Tanner Filip](https://tannerfilip.org/), Arber Shytermeja , Artemisa Themeli, and everybody who reached out to me in time of need.  Most importantly I want to thank my mom, sister, and friends (You know who you are :wink: )
+I want to thank [Redon Skikuli](http://redon.skikuli.com/), [Elio Qoshi](https://elioqoshi.me/), [Jona Azizaj](https://jona.azizaj.com/), [Kristi Progri](https://kristiprogri.com/), [Silva Arapi](https://twitter.com/arapisilva?lang=en) and every member of **[Open Labs Hackerspace](https://openlabs.cc)**. You guys provided a home and a family for me, without asking for anything in return. Second I want to rethank [Justin Flory](https://justinwflory.com/), for giving me the courage to talk about this. And I also want to thank [Tanner Filip](https://tannerfilip.org/), Arber Shytermeja , Artemisa Themeli, and everybody who reached out to me in time of need.  Most importantly I want to thank my mom, sister, and friends (You know who you are)
 Just wanted to let you know that, without all of you, I might not have been alive.
