--- a/_pages/404.md
+++ b/_pages/404.md
@@ -2,7 +2,7 @@
 layout: default
 title: Oh no!
 description: This page has disappeared!
-featured_image: /images/Sidebar/404.png
+featured_image: /images/Sidebar/404.jpg
 ---
 
 <section class="intro">
