Redo many things

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,22 +1,12 @@
 ---
-layout: default
+layout: page
 title: Oh no!
-description: This page has disappeared!
+subtitle: This page has disappeared!
 featured_image: /images/Sidebar/404.jpg
 ---
 
-<section class="intro">
 
-	<div class="wrap">
-
-		<h1>Oh no!</h1>
-		<p class="hero__text">This page has disappeared!</p>
-
-	</div>
-
-</section>
-
-<section class="single">
+<section class="blog single">
 
 	<div class="wrap">
 
