--- a/_pages/404.md
+++ b/_pages/404.md
@@ -9,7 +9,7 @@ featured_image: /images/Sidebar/404.jpg
 <section class="blog single">
 
 	<div class="wrap">
-
+		<h3> This page has disappeared!</h3>
 		<p class="hero__text">Perhaps my cat ate it while we weren't looking.</p>
 		<p><a href="/" class="button button--large">Back To Home</a></p>
 
