Apparently you shouldn't move 404

--- a/404.md
+++ b/404.md
@@ -1,18 +1,14 @@
 ---
-layout: page
+layout: default
 title: Oh no!
 subtitle: This page has disappeared!
 featured_image: /images/Sidebar/404.jpg
 ---
 
-
 <section class="blog single">
 
 	<div class="wrap">
+
 		<h3> This page has disappeared!</h3>
 		<p class="hero__text">Perhaps my cat ate it while we weren't looking.</p>
 		<p><a href="/" class="button button--large">Back To Home</a></p>
-
-	</div>
-
-</section>
