--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Oh no!
+title: Oh yes!
 subtitle: This page has disappeared!
 featured_image: /images/Sidebar/404.jpg
 ---
